# ah_t

./: .env  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci-pipeline.yaml
ah_t/: config.py  constants.py  database.py  dependencies.py  main.py  models.py  schemas.py
ah_t/routers/: car_owners.py  cars.py
ah_t/tests/: conftest.py  pre_test.py  test_api.py  test_models.py  test_t.py
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py  0002_add_trigger_to_check_car_owners_qty.py
docs/diagrams/: classes.plantuml  sequence.plantuml  user_cases.plantuml
