[tool.poetry]
name = "ah-t"
version = "0.1.0"
description = ""
authors = ["Bernardo Gomes <bgomesdeabreu@gmail.com>"]
readme = "README.md"
packages = [{include = "ah_t"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.92.0"
uvicorn = {extras = ["standard"], version = ">=0.20.0"}
sqlalchemy = ">=2.0.4"
alembic = ">=1.9.4"
pydantic = ">=1.10.5"
psycopg2 = ">=2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.1.1"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
sqlalchemy-utils = ">=0.40.0"
httpx = "^0.23.3"

[tool.poetry.group.code-quality.dependencies]
black = ">=22.10.0"
flake8 = ">=5.0.4"
bandit = ">=1.7.4"
isort = ">=5.10.1"
safety = ">=2.3.1"

[tool.isort]
profile = "black"
atomic = true

[tool.black]
line-length = 110
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
